--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,18 +1,31 @@
-on: push
-name: deploy
+name: Nodejs CI - APP backend school
+ 
+on: 
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
 jobs: 
-  deploy:
-    name: deploy to cluster
-    runs-on: ubuntu-latest
-    steps:  
+  build:
+
+    name: Build and deploy to Docker HUB
+    runs-on: ubuntu-latest 
+    steps:
       - uses: actions/checkout@master
       - name: build and push to docker
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:  
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: ${{ github.repository }}
-          tag_with_ref: true 
+          tag_with_ref: true
+
+  deploy:
+    
+    name: Deploy to Heroku
+    runs-on: ubuntu-latest
+    steps: 
       - name: Check out repository
         uses: actions/checkout@v2
       - name: Deploy to Heroku
