--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,7 +32,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/app-backend-school:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/app-backend-school:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
