--- a/package.json
+++ b/package.json
@@ -22,6 +22,14 @@
     },
     "homepage": "https://github.com/joao14/app-backend-school#readme",
     "dependencies": {
-        "express": "^4.17.1"
+        "bcrypt": "^5.0.1",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.0.14",
+        "pg": "^8.7.1"
+    },
+    "devDependencies": {
+        "dotenv": "^10.0.0",
+        "nodemon": "^2.0.15"
     }
 }
