--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "homepage": "https://github.com/joao14/app-backend-school#readme",
     "dependencies": {
         "bcrypt": "^5.0.1",
+        "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.0.14",
-        "pg": "^8.7.1",
-        "dotenv": "^10.0.0"
+        "pg": "^8.7.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.15"
